@@ -62,4 +62,4 @@ US_magnetic,PLANET,cat_hab3,0,-1,1,,,,,0.1,1,2,80,200,200 230 240,255 255 255,,,
 US_storm,PLANET,cat_hab2,0,-2,0,,,,,0.1,1,2,100,200,240 220 230,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #TODO,,this,this,this,this,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-US_waterHycean,PLANET,cat_hab2,50,0,1,,,,,0.15,1,2,170,240,220 230 240,255 255 255,,,,,,,,,,0.5,,,,,,,,,,,,,,,,,,,,
+US_waterHycean,PLANET,cat_nothing,150,0,1,,,,,0.15,1,2,170,230,220 230 240,255 255 255,,,,,,,,,,0.5,,,,,,,,,,,,,,,,,,,,
