@@ -8,7 +8,7 @@ import com.fs.starfarer.api.impl.campaign.population.PopulationComposition;
 import com.fs.starfarer.api.ui.TooltipMakerAPI;
 import com.fs.starfarer.api.util.Misc;
 
-import static data.scripts.US_utils.*;
+import static data.scripts.util.US_utils.*;
 
 public class US_religious extends BaseHazardCondition implements MarketImmigrationModifier {
     public static float STABILITY_BONUS = 1;
