@@ -1,4 +1,4 @@
-package data.scripts;
+package data.scripts.util;
 
 import com.fs.starfarer.api.Global;
 import com.fs.starfarer.api.campaign.PlanetAPI;
